--- a/src/index.html
+++ b/src/index.html
@@ -3,8 +3,29 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="../css/index.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>Portfolio</title>
   </head>
-  <body></body>
+
+  <nav class="navbar-homepage">
+    <img src="../images/Logo-color-done.png">
+  
+    <div class="nav">
+        <div class="nav-about-me"> <p>About me</p> </div>
+        <div class="nav-hobbies"> <p>Hobbies</p> </div>
+        <div class="nav-studies"> <p>Studies</p> </div>
+        <div class="nav-experience"> <p>Experience</p> </div>
+        <div class="nav-contact"> <p>Contact</p> </div> 
+    </div>
+  </nav>
+
+  <body>
+    
+  </body>
 </html>
