--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,13 @@
   </nav>
 
   <body>
-    
+    <div class="about-me">
+      <img src="../src/images/about-me-meme.jpg">
+
+
+    </div>
+
+
+
   </body>
 </html>
