I finish studies part

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,8 @@
     </div>
 
     <!-- Esta parte es para contener la parte de Hobbies -->
-    <h2>Hobbies</h2>
+    <h2 id="hobbies-header-text">Hobbies</h2>
+
     <div class="hobbies">
 
       
@@ -120,6 +121,62 @@
         </div>
 
       </div>
+
+    </div>
+
+    <!-- Awui empieza el contenedor doble para los estudios y proyectos -->
+
+    <h2 id="studies-projects-header-text">Studies & Projects</h2>
+
+    <div class="studies-projects">
+      <div class="studies">
+
+        <div class="studies-web-dev">
+          <img src="images/studies-projects/studies-ciccc.png">
+          <div class="web-dev-text">
+            <h3>Web Development Specialist</h3>
+            <p>2024  |  In Progress...</p>
+          </div>
+        </div>
+
+        <div class="studies-ind-eng">
+          <img src="images/studies-projects/ipn-studies.webp">
+          <div class="ind-end-text">
+            <h3>Industrial Engineer</h3>
+            <p>2013 - 2018 |  National Polytechnic Institute</p>
+          </div>
+        </div>
+
+        <div class="studies-html">
+          <img src="images/studies-projects/codecademy-studies.jpg">
+          <div class="html-text">
+            <h3>HTML</h3>
+            <p>2021  |  2 Months   |    CODECADEMY</p>
+          </div>
+        </div>
+
+        <div class="studies-css">
+          <img src="images/studies-projects/codecademy-studies.jpg">
+          <div class="css-text">
+            <h3>CSS</h3>
+            <p>2021  |   3 Months </p>
+          </div>
+        </div>
+
+
+
+
+        <div class="projects">
+          <img src="">
+          <h3>Payment Flow Automation</h3>
+          <p id="project-payment">2021  |  3 Months</p>
+        </div>
+
+      </div>
+
+
+
+
 
     </div>
     
