Studies & projects are done

--- a/src/index.html
+++ b/src/index.html
@@ -163,18 +163,69 @@
           </div>
         </div>
 
-
-
-
-        <div class="projects">
-          <img src="">
-          <h3>Payment Flow Automation</h3>
-          <p id="project-payment">2021  |  3 Months</p>
+        <div class="studies-excel">
+          <img src="images/studies-projects/excel.jpg">
+          <div class="excel-text">
+            <h3>VBA Excel</h3>
+            <p>2019  |   3 Months </p>
+          </div>
         </div>
 
       </div>
 
+      <div class="projects">
+          
+        <div class="project-payment">
+          <img src="images/studies-projects/bzr-payment.jpeg">
+          <div class="payment-text">
+            <h3>Online payment automation</h3>
+            <p>2019  |   5 Months </p>
+          </div>
+        </div>
 
+        <div class="project-documental">
+          <img src="images/studies-projects/bzr-payment.jpeg">
+          <div class="documental-text">
+            <h3>Document control automation</h3>
+            <p>2019  |   8 Months </p>
+          </div>
+        </div>
+
+        <div class="project-packaging">
+          <img src="images/studies-projects/bzr-payment.jpeg">
+          <div class="packaging-text">
+            <h3>Fine jewelry packaging redesign</h3>
+            <p>2018  |   2 Months </p>
+          </div>
+        </div>
+
+        <div class="project-ecommerce">
+          <img src="images/studies-projects/bzr-payment.jpeg">
+          <div class="ecommerce-text">
+            <h3>E-commerce</h3>
+            <p>2018  |   3 Months </p>
+          </div>
+        </div>
+
+        <div class="project-logistic">
+          <img src="images/studies-projects/bzr-payment.jpeg">
+          <div class="logistic-text">
+            <h3>Smart logistics and returns</h3>
+            <p>2018  |   2 Months </p>
+          </div>
+        </div>
+
+        <div class="project-international">
+          <img src="images/studies-projects/bzr-payment.jpeg">
+          <div class="international-text">
+            <h3>Automation of international purchase requests</h3>
+            <p>2018  |   3 Months </p>
+          </div>
+        </div>
+
+
+
+      </div>
 
 
 
