--- a/src/index.html
+++ b/src/index.html
@@ -230,6 +230,20 @@
 
 
     </div>
+
+
+    <!-- Aqui empieza el condigo para el footer con toda la info de contacto -->
+    <div class="contact">
+      <h5>Contact</h5>
+      <div class="contact-logos">
+        <img src="images/Icons/whatsapp-icon.png">
+        <img src="images/Icons/telegram-icon.png">
+        <img src="images/Icons/instagram-icon.png">
+      </div>
+
+
+
+    </div>
     
 
 
