Changes of format and colors

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,9 @@
   </head>
 
   <nav class="navbar-homepage">
-    <img src="../images/Logo-color-done.png">
+    <div class="nav-logo">
+      <p>KEVIN PATINO</p>
+    </div>
   
     <div class="nav">
         <div class="nav-about-me"> <p>About me</p> </div>
@@ -36,9 +38,9 @@
       <img src="images/about-me-meme.jpg">
 
       <div class="about-me-descrip">
-        <p class="name">Kevin Patino</p>
-        <p>Exercitation sit proident laborum dolore aute cupidatat non fugiat veniam incididunt. Esse occaecat et occaecat est pariatur consequat sunt nulla nostrud do et consequat. Occaecat ad ex velit quis proident exercitation est excepteur cupidatat aliquip enim sunt id. Magna cupidatat officia eiusmod exercitation. Ipsum ullamco culpa aliqua labore deserunt nisi commodo. Do dolore sunt pariatur proident id duis nostrud labore veniam voluptate.</p>
-        <p class="more-about-me">More about me</p>
+        <p class="name">HELLO, MY NAME IS <br> <p class="main-name">KEVIN PATINO</p> </p>
+        <p>I am a Web Development student</p>
+        <!-- <p class="more-about-me">More about me</p> -->
       </div>
 
     </div>
@@ -47,8 +49,6 @@
     <h2 id="hobbies-header-text">Hobbies</h2>
 
     <div class="hobbies">
-
-      
 
       <!-- Esto es la imagen 1 "Music" -->
       <div class="music">
