add anchor to every part of the site

--- a/src/index.html
+++ b/src/index.html
@@ -35,11 +35,11 @@
     </div>
   
     <div class="nav">
-        <div class="nav-about-me"> <p>About me</p> </div>
-        <div class="nav-hobbies"> <p>Soft Skills</p> </div>
-        <div class="nav-studies"> <p>Studies</p> </div>
-        <div class="nav-experience"> <p>Projects</p> </div>
-        <div class="nav-contact"> <p>Contact</p> </div> 
+        <a href="#aboutme-header-text"> <p>About me</p> </a>
+        <a href="#soft-header-text"> <p>Soft Skills</p> </a>
+        <a href="#hobbies-header-text"> <p>Hobbies</p> </a>
+        <a href="#studies-projects-header-text"><p>Projects</p> </a> 
+        <a href="#contact-anchor"> <p>Contact</p> </a>
     </div>
   </nav>
 
@@ -59,7 +59,7 @@
     <!-- Esta parte es para contener la parte de more about me -->
     
     <h2 id="aboutme-header-text">About me</h2>
-    <div class="description-aboutme">
+    <div class="description-aboutme" id="about-me-anchor">
       <img id="nature-icon" src="images/Icons/nature icon.webp">
       <p id="text-aboutme">I am from <span id="special">Acapulco, México,</span> <br><br> Born and raise surrounded by lot of <span id="special">nature</span>, <span id="special">sunny days</span> and <span id="special">the beach</span>, always intrigued on how everything works and giving a really big importance on the <span id="special">small things</span>, with curiosity in a lot of different topics.</p>
       <img id="beach-icon" src="images/Icons/beach icon.png">
@@ -281,7 +281,7 @@
 
     <!-- Aqui empieza el condigo para el footer con toda la info de contacto -->
     <div class="contact">
-      <h5>Contact</h5>
+      <h5 id="contact-anchor">Contact</h5>
       <div class="contact-logos">
         <img src="images/Icons/whatsapp-icon.png">
         <img src="images/Icons/telegram-icon.png">
