Finishing mobile part

--- a/src/index.html
+++ b/src/index.html
@@ -46,7 +46,7 @@
   <body>
     <!-- Esta parte es para contener la parte de About me -->
     <div class="about-me">
-      <img src="images/about-me-meme.jpg">
+      <img src="images/profile-pic.jpg">
 
       <div class="about-me-descrip">
         <p class="name">HELLO, MY NAME IS <br> <p class="main-name">Kevin Patino</p> </p>
